# mim

./: .gitignore  .gitmodules  Common.mk  configure.ac
ext/: Makefile.am
src/avahi/: Makefile  Makefile.am  client-discover  client-publish  client_discover.c  client_publish.c
src/libclang/: header.hpp
src/nodejs/: Makefile  Makefile.am
src/nodejs/dashboard/: index.html  package-lock.json  package.json
src/nodejs/dashboard/src/: App.vue  main.js
src/nodejs/dashboard/src/components/: Canvas.vue  Drawer.vue  MimInstanceTree.vue  Settings.vue
src/nodejs/dashboard/tmp/: index.js  package-lock.json  package.json
src/nodejs/dashboard/tmp/components/: Buildings.vue  Control.vue  Drawer.vue  Fraction.vue  Gallery.vue  Help.vue  Mechs.vue  Settings.vue
src/nodejs/dashboard/tmp/vuetify/my-app/: package-lock.json  package.json
