include $(top_srcdir)/Common.mk
include $(top_srcdir)/conf/kscripts/nodejs.mk

NODOCKERBUILD = %

## DEFAULT MODULES ##
NAME = r1

## ////////////////////////////////////////////////////////////////////////////////
## //  STANDALONE  ////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

js-testserver: ##@node start testserver.js standalone app
testserver_DEPS = menu

## ////////////////////////////////////////////////////////////////////////////////
## //  NODE  //////////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

NODE_MODULES =

## ////////////////////////////////////////////////////////////////////////////////
## //  REACT  /////////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

REACT_MODULES =

clean: clean-deps
	@ $(info not implemented yet)



