include $(top_srcdir)/Common.mk
include $(top_srcdir)/conf/kscripts/nodejs.mk

NODOCKERBUILD += %

## ////////////////////////////////////////////////////////////////////////////////
## //  STANDALONE  ////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

js-testserver: ##@node start testserver.js standalone app
testserver_DEPS = menu

## ////////////////////////////////////////////////////////////////////////////////
## //  NODE  //////////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

NODE_MODULES    = dashboard
dashboard_DEPS  = vue redis @vue/ui svg.js svg.panzoom.js svg.draggable.js

all: start

clean: clean-deps
	@ $(info not implemented yet)

start: NPM_ARGS=dev
start: npm-run

