include $(top_srcdir)/Common.mk
include $(top_srcdir)/conf/kscripts/nodejs.mk

NODOCKERBUILD += %

## ////////////////////////////////////////////////////////////////////////////////
## //  STANDALONE  ////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

js-testserver: ##@node start testserver.js standalone app
testserver_DEPS = menu

## ////////////////////////////////////////////////////////////////////////////////
## //  NODE  //////////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

NODE_MODULES    = dashboard
dashboard_DEPS  = vue redis @vue/ui svg.js svg.panzoom.js svg.draggable.js

all: start

clean: clean-deps
	@ $(info not implemented yet)

start: NPM_ARGS=dev
start: deps npm-run


VS_CODE_PROJECT_PATH = ./dashboard



## ////////////////////////////////////////////////////////////////////////////////
## //  SOMATA  ////////////////////////////////////////////////////////////////////
## ////////////////////////////////////////////////////////////////////////////////

DOWNLOADS     = somata-registry
NODE_MODULES += somata-registry
somata-registry: ##@somata download somata-registry
somata_registry_URL = https://github.com/somata/somata-registry.git

# VS_CODE_PROJECT_PATH += ./somata-registry



DOWNLOADS    += somata-node
NODE_MODULES += somata-node
somata-node:
somata_node_URL = https://github.com/somata/somata-node.git

# VS_CODE_PROJECT_PATH += ./somata-node

